--- a/src/main__nav.css
+++ b/src/main__nav.css
@@ -1,13 +1,26 @@
 .main__nav {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  width: 60px;
   padding: 20px 0;
   position: fixed;
-  background-color: aqua;
+  background-color: none;
   top: 0;
+  right: 0;
+  text-decoration: none;
 }
 
 li {
   cursor: pointer;
+  margin-bottom: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: black;
+  text-decoration: none;
+}
+
+ul {
+  text-decoration: none;
 }
