--- a/src/main__nav.css
+++ b/src/main__nav.css
@@ -11,16 +11,25 @@
   text-decoration: none;
 }
 
-li {
+.dot {
   cursor: pointer;
   margin-bottom: 20px;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: black;
   text-decoration: none;
 }
+/* li {
+  cursor: pointer;
+  margin-bottom: 20px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: black;
+  text-decoration: none;
+} */
 
 ul {
-  text-decoration: none;
+  list-style-type: none;
 }
