--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
 .App > div {
   width: 100vw;
   min-height: 100vh;
-  margin-top: 100px; /*give space between app for title or logo*/
+  /*give space between app for title or logo*/
 }
