--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -1,5 +1,20 @@
-.main_sec_1 {
+.home_main {
   background-color: #152238;
   width: 100vw;
   min-height: 100vh;
+}
+.column {
+  float: left;
+  width: 50%;
+}
+/* img container */
+div.home_col[class="2"] {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero_img_container img {
+  width: 50%;
+  height: 50%;
 }
