--- a/src/containers/Resume/resume.css
+++ b/src/containers/Resume/resume.css
@@ -1,7 +1,6 @@
-.main_sec_4 {
+.resume_main {
   background-color: #d8b81f;
   width: 100vw;
   min-height: 100vh;
-
-  /* margin-bottom: 100px; */
+  color: white;
 }
