--- a/src/containers/Contact/contact.css
+++ b/src/containers/Contact/contact.css
@@ -3,6 +3,37 @@
   width: 100vw;
   min-height: 100vh;
   color: white;
-
   /* margin-bottom: 100px; */
+  display: flex;
+  flex-direction: column; /* change to column to stack elements vertically */
+  justify-content: center; /* center elements vertically */
+  align-items: center;
+  background-color: #152238;
+  position: relative; /* add position to allow absolute positioning of h1 element */
+}
+.contact_title {
+  position: absolute;
+  top: 0;
+  margin-top: 150px;
+  left: 50%; /* move left by half of the container width to center the h1 element */
+  transform: translateX(-50%);
+  color: white;
+  font-size: 50px;
+}
+
+.ghostBtn_contact {
+  color: white;
+  border: 3px solid white;
+  background-color: transparent;
+  border-radius: 10px; /* add border radius to make the corners rounded */
+  padding: 10px 50px;
+  margin: 15px;
+  font-size: 50px;
+  transition: all 0.3s ease; /* add transition effect to hover state */
+}
+
+.ghostBtn_contact:hover {
+  background-color: white;
+  color: #152238;
+  cursor: pointer;
 }
