--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -19,3 +19,10 @@ div.home_col[class="2"] {
   width: 50%;
   height: 50%;
 }
+
+.anchor_dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+}
