--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -26,3 +26,82 @@ div.home_col[class="2"] {
   border-radius: 50%;
   background-color: red;
 }
+
+.arrow {
+  max-width: 12%;
+  padding-top: 100px;
+  cursor: pointer;
+  animation-name: pulsate;
+  animation-duration: 5s; /*change speed of animation */
+  animation-timing-function: ease-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* flipping flipping_words  */
+.flipping_words {
+  display: inline-block;
+  margin-right: -30px;
+}
+.flipping_words span {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  overflow: hidden;
+  animation: change-text 10s linear infinite;
+}
+.flipping_words span::before {
+  content: "";
+  position: absolute;
+}
+
+.flipping_words span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.flipping_words span:nth-child(2) {
+  animation-delay: 2s;
+}
+
+.flipping_words span:nth-child(3) {
+  animation-delay: 4s;
+}
+
+@keyframes change-text {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  2% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  18% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  20% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+}
+
+.home_static_h2 {
+  display: inline-block;
+  margin-left: 220px;
+}
