--- a/src/containers/About/about.css
+++ b/src/containers/About/about.css
@@ -8,6 +8,7 @@
 .about_row {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 100px;
 }
 
 .about_col {
@@ -48,10 +49,14 @@
 
 .about_col_2 {
   width: 60%;
-  font-family: "Lato", sans-serif;
   font-weight: bold;
   font-size: 20px;
   color: white;
+}
+
+.about_statement {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
 }
 
 .about_col_2 ul {
@@ -73,7 +78,7 @@
   border-radius: 10px;
   padding: 10px 50px;
   margin: 15px;
-  font-size: 50px;
+  font-size: 30px;
   transition: all 0.3s ease;
 }
 .about_statement {
