--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -60,18 +60,21 @@ div.home_col[class="2"] {
 
 /* flipping flipping_words  */
 .flipping_words {
-  display: inline-block;
-  position: relative;
-  margin-bottom: 30px;
-  margin-right: 125px;
-  font-family: "Lato", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  margin-bottom: 30px;
+  font-family: "Lato", sans-serif;
   color: #ffffff;
   font-size: 2rem;
   font-weight: 200;
   text-transform: uppercase;
+  white-space: nowrap;
+  margin-top: 30px;
 }
 .flipping_words span {
+  margin-top: 250px;
   position: absolute;
   top: 0;
   opacity: 0;
