--- a/src/containers/Contact/contact.css
+++ b/src/containers/Contact/contact.css
@@ -15,7 +15,7 @@
 .contact_title {
   position: absolute;
   top: 0;
-  margin-top: 150px;
+  padding-top: 25px;
   left: 50%; /* move left by half of the container width to center the h1 element */
   transform: translateX(-50%);
   color: white;
