--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -30,7 +30,7 @@ div.home_col[class="2"] {
 
 .home_arrow {
   position: absolute;
-  bottom: 20px; /* Adjust the distance from the bottom as needed */
+  padding-bottom: 20px; /* Adjust the distance from the bottom as needed */
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
