--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -36,6 +36,7 @@ div.home_col[class="2"] {
   transform: translateX(-50%);
   width: 100%;
   text-align: center;
+  margin-top: -30px;
 }
 
 .arrow {
@@ -140,7 +141,7 @@ div.home_col[class="2"] {
 
 #home_title {
   font-family: "Libre Baskerville", serif;
-  font-size: 80px;
+  font-size: 75px;
   margin: 0;
   padding-top: 30px;
   padding-bottom: 15px;
