--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -76,7 +76,7 @@ div.home_col[class="2"] {
   margin-top: 30px;
 }
 .flipping_words span {
-  margin-top: 250px;
+  margin-top: 220px;
   position: absolute;
   top: 0;
   opacity: 0;
@@ -147,12 +147,24 @@ div.home_col[class="2"] {
   padding-bottom: 15px;
 }
 
+/* #location {
+  font-family: "Lato", sans-serif;
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: 200;
+  text-transform: uppercase;
+} */
+
 #location {
   font-family: "Lato", sans-serif;
   color: #ffffff;
   font-size: 1.5rem;
   font-weight: 200;
   text-transform: uppercase;
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .navbar {
