--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -161,7 +161,7 @@ div.home_col[class="2"] {
   font-size: 1.5rem;
   font-weight: 200;
   text-transform: uppercase;
-  position: fixed;
+  position: absolute;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
