--- a/src/containers/About/about.css
+++ b/src/containers/About/about.css
@@ -8,10 +8,10 @@
 .about_row {
   display: flex;
   flex-wrap: row;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 0;
   justify-content: center; /* center horizontally */
-  padding: 0 50px;
+  padding: 0 25px;
 }
 
 .about_col {
@@ -37,6 +37,9 @@
   font-family: "Lato", sans-serif;
   color: #ffffff;
   font-size: 2rem;
+  text-align: left; /* Align the title to the left */
+  padding-top: 25px;
+  padding-left: 115px;
 }
 .about_name h2 {
   justify-content: center;
@@ -77,7 +80,7 @@
   padding-bottom: 15px;
 }
 .about_statement {
-  padding: 10px;
+  /* padding: 10px; */
   width: auto;
   font-family: "Lato", sans-serif;
   font-weight: 550;
@@ -89,6 +92,7 @@
   justify-content: center; /* Center the items horizontally */
   list-style-type: none;
   padding-left: 0;
+  font-size: 12px;
 }
 
 #about_lists li {
