--- a/src/containers/Portfolio/portfolio.css
+++ b/src/containers/Portfolio/portfolio.css
@@ -62,3 +62,10 @@
 .port_arrow {
   padding-top: 30px;
 }
+
+.project_card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 4rem;
+}
