--- a/src/containers/Portfolio/portfolio.css
+++ b/src/containers/Portfolio/portfolio.css
@@ -29,25 +29,27 @@
 /*---------------------------*/
 .gallery_container {
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
+  height: 800px; /* Adjust the value to fit within the viewport */
+  overflow-y: auto; /* Enable vertical scrolling */
   padding-top: 25px;
 }
 
+.project_card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Create a 3-column grid */
+  grid-gap: 10px; /* Add spacing between the cards */
+  margin-top: 4rem;
+}
+
 .card {
-  position: relative;
+  flex: 0 0 auto; /* Prevent cards from shrinking */
   width: 30%;
   height: 450px;
   margin: 10px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* Rest of the CSS for card styling */
 }
 
-.card img {
+/* .card img {
   display: block;
   width: 100%;
   height: 100%;
@@ -56,8 +58,7 @@
 }
 
 .card:hover img {
-  transform: scale(1.1); /* zoom in effect when img is hovered */
-}
+  transform: scale(1.1); /* zoom in effect when img is hovered} */
 
 .port_arrow {
   padding-top: 30px;
