--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,6 +1,9 @@
 .card {
   border: 1px solid rgba(0, 0, 0, 0.175);
   border-radius: 10px;
+  width: 300px;
+  padding: 10px;
+  background-color: red;
 }
 
 .number {
