--- a/src/containers/About/about.css
+++ b/src/containers/About/about.css
@@ -19,6 +19,9 @@
 .about_col {
   margin-bottom: 20px;
   padding: 10px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  margin-right: 20px; /* Add margin between columns */
 }
 
 .about_col:nth-child(2) {
