--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,7 +2,9 @@
   border: 1px solid rgba(255, 255, 255, 0.175);
   border-radius: 10px;
   width: 300px;
-  padding: 10px;
+  padding: 5px;
+  /* margin-bottom: 2500px;  */
+  /*remove when applicable*/
 }
 
 .number {
@@ -13,8 +15,9 @@
 }
 
 .project_title {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   font-weight: 600;
+  margin: 0;
 }
 
 .projectPic {
@@ -27,12 +30,6 @@
 }
 
 .open_link {
-  padding: 0.8rem;
-  outline: none;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 1.5rem;
 }
 
 .open_link:hover {
@@ -40,18 +37,10 @@
   color: #ffff;
 }
 
-@media screen and (max-width: 1400px) {
-  .profile-card {
-    display: flex;
-    flex-direction: column;
-    margin-top: 1rem;
-  }
-
-  .card {
-    margin-top: 3rem;
-  }
+.gh_link {
+  padding: 10px;
 }
 
-.gh_link {
-  padding: 20px;
+.card_btns {
+  padding: 15px;
 }
