--- a/src/containers/Resume/resume.css
+++ b/src/containers/Resume/resume.css
@@ -24,7 +24,7 @@
 /* resume content */
 .resume_row {
   display: flex;
-  padding: 25px;
+  padding: 20px;
 }
 
 #label {
@@ -66,6 +66,8 @@ ul {
   padding-left: 10px;
 }
 
-li {
+.resume_li {
   margin-bottom: 5px;
+
+  list-style-type: none;
 }
