--- a/src/containers/Resume/resume.css
+++ b/src/containers/Resume/resume.css
@@ -77,7 +77,7 @@ ul {
   font-family: "Lato", sans-serif;
   color: #ffffff;
   font-size: 2rem;
-  text-align: right; /* Align the title to the left */
+  text-align: right; /* Align the title to the right */
   padding-top: 25px;
   padding-left: 115px;
   padding-right: 200px;
