--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,7 +1,7 @@
 .card {
   border: 3px solid rgba(255, 255, 255, 0.711);
   border-radius: 10px;
-  padding: 5px;
+  /* padding: 5px; */
   /* margin-bottom: 2500px;  */
   /*remove when applicable*/
 }
