--- a/src/containers/Home/home.css
+++ b/src/containers/Home/home.css
@@ -174,3 +174,21 @@ div.home_col[class="2"] {
 .navbar ul {
   padding-top: 10px;
 }
+
+/* Media Queries */
+
+@media screen and (min-width: 480px) {
+  /* Styles for small mobile devices */
+}
+
+@media screen and (min-width: 768px) {
+  /* Styles for medium mobile devices */
+}
+
+@media screen and (min-width: 1024px) {
+  /* Styles for large mobile devices */
+}
+
+@media screen and (min-width: 1200px) {
+  /* Styles for extra-large mobile devices */
+}
