--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -14,21 +14,28 @@
   position: relative;
   background-color: white;
   padding: 20px;
-  max-width: 500px;
-  width: 80%;
+  /* max-width: 500px; */
+
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  max-width: 800px; /* Adjust the max-width value to your preference */
+  width: 90%; /* Adjust the width value to your preference */
 }
 
 .modal_img {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
+  max-width: 480px;
+  max-height: 480px;
+
+  object-fit: contain;
   border-radius: 8px;
+  max-width: 100%; /* Allow the image to resize within the modal */
+  height: auto; /* Maintain the aspect ratio of the image */
+  margin: 0;
 }
 
 .modal_body {
   margin-top: 20px;
+  color: black;
 }
 
 .modal_title {
@@ -37,23 +44,29 @@
 }
 
 .modal_description {
-  margin-top: 10px;
+  padding: 15px 20px 30px 20px;
   font-size: 16px;
 }
 
 .modal_skills {
   margin-top: 10px;
   font-size: 14px;
+  display: flex;
+  justify-content: center;
 }
 
 .modal_skills ul {
-  margin: 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 .modal_skills li {
-  margin-bottom: 5px;
+  padding: 8px 16px;
+  margin: 0 8px;
+  background-color: #f0f0f0;
+  border-radius: 4px;
 }
 
 .close_btn {
@@ -69,4 +82,8 @@
 
 .close_btn:hover {
   color: #333;
+}
+
+.modal_description {
+  padding-bottom: 15px;
 }
