--- a/src/containers/About/about.css
+++ b/src/containers/About/about.css
@@ -208,3 +208,7 @@
   align-items: center; /* Center items horizontally */
   justify-content: center; /* Center items vertically */
 }
+
+.about_row_2 {
+  padding-bottom: 25px;
+}
